<resources>
    <string name="app_name">服务</string>
    <string name="main_nav_recommend">推荐</string>
    <string name="main_nav_support">服务</string>
    <string name="main_nav_policy">政策</string>
    <string name="common_support">8848服务</string>
    <string name="common_search">搜索</string>
    <string name="common_default_city">北京</string>
    <string name="your_personal_cell_phone_assistant">官方服务  贴心保障</string>

    <string name="spare_parts_management">备件价格</string>
    <string name="contact_us">联系我们</string>
    <string name="common_troubleshooting">故障排查</string>
    <string name="common_more">更多</string>
    <string name="after_sale_service">售后服务</string>
    <string name="change_of_purchase_service">换购服务</string>
    <string name="after_sale_service_detail">售后服务详情</string>
    <string name="change_of_purchase_service_detail">换购服务详情</string>
    <string name="service_time">服务时间</string>
    <string name="service_phone">服务电话</string>
    <string name="common_contact">联系人</string>
    <string name="no_map">请先安装地图客户端</string>
    <string name="after_sales_policy">售后政策</string>
    <string name="service_scope">服务范围</string>
    <string name="special_reminder">特殊提醒</string>
    <string name="about_us">客服中心</string>
    <string name="about_company">公司简介</string>
    <string name="selection_of_equipment">选取设备</string>
    <string name="spare_parts_detail">备件详情</string>
    <string name="your_personal_phone_assistant">您的私人手机助理</string>
    <string name="search_history">搜索历史</string>
    <string name="common_clear">清除</string>
    <string name="is_it_helpful_to_you">是否对您有帮助？</string>
    <string name="thank_you_for_your_feedback">谢谢反馈！</string>
    <string name="common_company_name">北京珠穆朗玛移动通信有限公司</string>
    <string name="common_service_time">周一至周日每日8:00-21:00全年无休</string>
    <string name="about_company_content">
    8848钛金手机是北京珠穆朗玛移动通信有限公司旗下高端手机品牌，公司是中国500强企业同方股份（股票代码：600100）投资的高科技企业。\n
        2015年7月28日，8848钛金手机第一代正式对外发布，成为中国第一个定价万元的手机品牌，在中国开创了一个全新的手机领域：
        提出实用奢华主义的产品理念，以奢华的外观，实用的安全功能，一年一款产品的更新迭代，在科技与奢侈之间做到了动态平衡，
        打破了科技与奢侈品难以兼容的悖论。</string>


    <string name="common_name">名称：</string>
    <string name="common_value">￥</string>
    <string name="common_specs">规格：</string>
    <string name="common_explain">说明：</string>
    <string name="common_remark">提醒：</string>
    <string name="positioning_failure">定位失败</string>
    <string name="hot_cities">热门城市</string>
    <string name="Search_locate_content">输入城市名或拼音查询</string>

    <string name="network_connection_failed">网络连接失败</string>
    <string name="failed_to_obtain_network_information">获取网络信息失败</string>

    <string name="check_your_permission">请检查您的权限是否开启</string>
    <string name="check_your_switch">请检查您的开关是否开启</string>
    <string name="check_your_provider">请检查您的硬件是否支持</string>
    <string name="check_your_city">无法寻找到对应城市</string>

    <string name="no_search_city_hint">抱歉,您输入的城市当前暂无客服中心，您可以在有服务中心的城市列表中直接选择，或根据定位选择推荐的就近网点</string>
    <string name="has_city_list">以下城市有服务中心</string>
    <string name="clipper_service">快捷服务</string>
</resources>
