<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.support.SearchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_back"/>

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/search_shape"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/img_search" />
            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:hint="@string/common_search"
                android:textSize="14sp"
                android:textColor="@color/ad_item_title_text"
                android:textColorHint="@color/ad_item_hint_text"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ad_item_title_text"
            android:textSize="18sp"
            android:text="@string/search_history"/>
        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/service_list_item_distance"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:text="@string/common_clear"/>
    </RelativeLayout>
    <GridView
        android:id="@+id/gv_history"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:listSelector="@android:color/transparent"
        android:fadingEdge="none"
        android:stretchMode="columnWidth"
        android:numColumns="auto_fit"
        android:layout_height="match_parent" />
</LinearLayout>