<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="14sp"
                android:textColor="@color/loading_hint_text"
                android:text="@string/your_personal_cell_phone_assistant" />
            <ImageView
                android:id="@+id/iv_contact_us"
                android:layout_width="wrap_content"
                android:src="@mipmap/img_contact_us"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textSize="32sp"
            android:visibility="gone"
            android:textColor="@color/ad_item_title_text"
            android:text="@string/common_support" />
        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/search_shape"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/img_search" />
            <TextView
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:hint="@string/common_search"
                android:textSize="14sp"
                android:textColor="@color/ad_item_title_text"
                android:textColorHint="@color/ad_item_hint_text"
                android:background="@null"/>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_marginTop="20dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_banner"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:src="@color/colorPrimary" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_banner_position_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    android:src="@mipmap/dot_normal" />
                <ImageView
                    android:id="@+id/iv_banner_position_two"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    android:src="@mipmap/dot_normal" />
                <ImageView
                    android:id="@+id/iv_banner_position_three"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/dot_normal" />
                <ImageView
                    android:id="@+id/iv_banner_position_four"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/dot_normal" />
                <ImageView
                    android:id="@+id/iv_banner_position_five"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/dot_normal" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/ad_item_title_text"
                android:layout_centerVertical="true"
                android:text="@string/clipper_service"
                android:textStyle="bold"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/rl_about_us"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="65dp"
                android:background="@mipmap/show_service_center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:text="@string/about_us" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_spare_parts_management"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_height="65dp"
                android:background="@mipmap/show_service_left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:text="@string/spare_parts_management" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_after_sales_policy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_height="65dp"
                android:background="@mipmap/show_service_right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:text="@string/after_sales_policy" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_common_troubleshooting"
                android:layout_width="0dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:layout_height="65dp"
                android:background="@mipmap/show_service_new">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:text="@string/common_troubleshooting" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/ad_item_title_text"
                android:layout_centerVertical="true"
                android:text="@string/common_troubleshooting"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/iv_more_troubleshooting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/img_more"/>
        </RelativeLayout>
        <com.dfh.support.activity.widget.ChildrenGridView
            android:id="@+id/gv_troubleshooting"
            android:layout_width="match_parent"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:visibility="gone"
            android:stretchMode="spacingWidthUniform"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_troubleshooting_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_troubleshooting_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/ad_item_title_text"
                android:layout_centerVertical="true"
                android:text="@string/after_sale_service"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/iv_more_after_sale_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/img_more"/>
        </RelativeLayout>
        <com.dfh.support.activity.widget.ChildrenListView
            android:id="@+id/lv_after_sale_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:divider="#00000000"
            android:dividerHeight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/ad_item_title_text"
                android:layout_centerVertical="true"
                android:text="@string/change_of_purchase_service"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/iv_more_change_of_purchase_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/img_more"/>
        </RelativeLayout>
        <com.dfh.support.activity.widget.ChildrenListView
            android:id="@+id/lv_change_of_purchase_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:divider="#00000000"
            android:dividerHeight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>
</ScrollView>